Added year num param in get_training to documentation

--- a/FootballML/Individual_Results/logistic_regression_results.ipynb
+++ b/FootballML/Individual_Results/logistic_regression_results.ipynb
@@ -38,115 +38,173 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[       Unnamed: 0  attendance  away_first_downs  away_fourth_down_attempts  \\\n",
-       " 0    200709060clt       57361                18                          1   \n",
-       " 1    200709090ram       65307                21                          0   \n",
-       " 2    200709090min       62815                17                          0   \n",
-       " 3    200709090buf       71132                23                          2   \n",
-       " 4    200709090was       90163                17                          0   \n",
-       " ..            ...         ...               ...                        ...   \n",
-       " 262  200801130clt       56950                20                          0   \n",
-       " 263  200801130dal       63660                16                          0   \n",
-       " 264  200801200nwe       68756                17                          0   \n",
-       " 265  200801200gnb       72740                24                          1   \n",
-       " 266  200802030nwe       71101                17                          1   \n",
-       " \n",
-       "      away_fourth_down_conversions  away_fumbles  away_fumbles_lost  \\\n",
-       " 0                               1             2                  1   \n",
-       " 1                               0             3                  2   \n",
-       " 2                               0             1                  0   \n",
-       " 3                               2             1                  0   \n",
-       " 4                               0             1                  1   \n",
-       " ..                            ...           ...                ...   \n",
-       " 262                             0             1                  0   \n",
-       " 263                             0             0                  0   \n",
-       " 264                             0             1                  0   \n",
-       " 265                             0             5                  1   \n",
-       " 266                             1             2                  0   \n",
-       " \n",
-       "      away_interceptions  away_net_pass_yards  away_pass_attempts  ...  \\\n",
-       " 0                     2                  187                  41  ...   \n",
-       " 1                     0                  199                  27  ...   \n",
-       " 2                     2                  169                  32  ...   \n",
-       " 3                     1                  299                  39  ...   \n",
-       " 4                     0                  207                  38  ...   \n",
-       " ..                  ...                  ...                 ...  ...   \n",
-       " 262                   1                  312                  23  ...   \n",
-       " 263                   0                  140                  18  ...   \n",
-       " 264                   2                  207                  37  ...   \n",
-       " 265                   0                  243                  40  ...   \n",
-       " 266                   1                  247                  34  ...   \n",
-       " \n",
-       "                            stadium    surface     time  \\\n",
-       " 0                         RCA Dome  Fieldturf   8:39pm   \n",
-       " 1                Edward Jones Dome  Fieldturf  12:59pm   \n",
-       " 2     Hubert H. Humphrey Metrodome  Fieldturf   1:00pm   \n",
-       " 3             Ralph Wilson Stadium  Astroplay   1:02pm   \n",
-       " 4                       FedExField      Grass   1:02pm   \n",
-       " ..                             ...        ...      ...   \n",
-       " 262                       RCA Dome  Fieldturf   1:06pm   \n",
-       " 263                  Texas Stadium  Fieldturf   4:45pm   \n",
-       " 264               Gillette Stadium  Fieldturf   3:05pm   \n",
-       " 265                  Lambeau Field      Grass   6:42pm   \n",
-       " 266  University of Phoenix Stadium      Grass   6:30pm   \n",
-       " \n",
-       "                      vegas_line  \\\n",
-       " 0       Indianapolis Colts -5.5   \n",
-       " 1           St. Louis Rams -1.0   \n",
-       " 2        Minnesota Vikings -3.0   \n",
-       " 3           Denver Broncos -3.0   \n",
-       " 4      Washington Redskins -3.0   \n",
-       " ..                          ...   \n",
-       " 262    Indianapolis Colts -11.0   \n",
-       " 263         Dallas Cowboys -7.0   \n",
-       " 264  New England Patriots -14.0   \n",
-       " 265      Green Bay Packers -7.5   \n",
-       " 266  New England Patriots -12.5   \n",
-       " \n",
-       "                                                weather  winner  winning_abbr  \\\n",
-       " 0                                                  NaN    Home           CLT   \n",
-       " 1                                                  NaN    Away           CAR   \n",
-       " 2                                                  NaN    Home           MIN   \n",
-       " 3    70 degrees, relative humidity 93%, wind 5 mph,...    Away           DEN   \n",
-       " 4    82 degrees, relative humidity 66%, wind 7 mph,...    Home           WAS   \n",
-       " ..                                                 ...     ...           ...   \n",
-       " 262                                                NaN    Away           SDG   \n",
-       " 263  59 degrees, relative humidity 30%, no wind, wi...    Away           NYG   \n",
-       " 264  23 degrees, relative humidity 33%, wind 17 mph...    Home           NWE   \n",
-       " 265  -1 degrees, relative humidity 49%, wind 12 mph...    Away           NYG   \n",
-       " 266                                                NaN    Away           NYG   \n",
-       " \n",
-       "              winning_name  won_toss  week  \n",
-       " 0      Indianapolis Colts     Colts     1  \n",
-       " 1       Carolina Panthers  Panthers     1  \n",
-       " 2       Minnesota Vikings   Vikings     1  \n",
-       " 3          Denver Broncos     Bills     1  \n",
-       " 4     Washington Redskins  Dolphins     1  \n",
-       " ..                    ...       ...   ...  \n",
-       " 262    San Diego Chargers     Colts    19  \n",
-       " 263       New York Giants    Giants    19  \n",
-       " 264  New England Patriots  Chargers    20  \n",
-       " 265       New York Giants   Packers    20  \n",
-       " 266       New York Giants    Giants    21  \n",
-       " \n",
-       " [267 rows x 67 columns]]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[       Unnamed: 0  attendance  away_first_downs  away_fourth_down_attempts  \\\n",
+      "0    201809060phi       69696                16                          1   \n",
+      "1    201809090cle       67431                25                          0   \n",
+      "2    201809090rav       70591                10                          1   \n",
+      "3    201809090nyg       77992                17                          0   \n",
+      "4    201809090nwe       65878                21                          1   \n",
+      "..            ...         ...               ...                        ...   \n",
+      "262  201901130nwe       65878                22                          1   \n",
+      "263  201901130nor       73027                15                          0   \n",
+      "264  201901200nor       73028                19                          1   \n",
+      "265  201901200kan       77034                36                          2   \n",
+      "266  201902030ram       70081                14                          0   \n",
+      "\n",
+      "     away_fourth_down_conversions  away_fumbles  away_fumbles_lost  \\\n",
+      "0                               0             1                  0   \n",
+      "1                               0             3                  3   \n",
+      "2                               0             1                  0   \n",
+      "3                               0             0                  0   \n",
+      "4                               0             1                  1   \n",
+      "..                            ...           ...                ...   \n",
+      "262                             1             1                  1   \n",
+      "263                             0             0                  0   \n",
+      "264                             1             1                  0   \n",
+      "265                             1             0                  0   \n",
+      "266                             0             1                  0   \n",
+      "\n",
+      "     away_interceptions  away_net_pass_yards  away_pass_attempts  ...  \\\n",
+      "0                     1                  225                  43  ...   \n",
+      "1                     3                  313                  41  ...   \n",
+      "2                     2                   70                  33  ...   \n",
+      "3                     1                  168                  33  ...   \n",
+      "4                     1                  158                  34  ...   \n",
+      "..                  ...                  ...                 ...  ...   \n",
+      "262                   1                  316                  51  ...   \n",
+      "263                   2                  201                  31  ...   \n",
+      "264                   1                  301                  41  ...   \n",
+      "265                   2                  348                  46  ...   \n",
+      "266                   1                  198                  38  ...   \n",
+      "\n",
+      "                     stadium    surface    time                 vegas_line  \\\n",
+      "0    Lincoln Financial Field      Grass  8:20pm   Philadelphia Eagles -1.0   \n",
+      "1        FirstEnergy Stadium      Grass  1:00pm   Pittsburgh Steelers -3.5   \n",
+      "2           M&T Bank Stadium      Grass  1:00pm      Baltimore Ravens -7.5   \n",
+      "3            MetLife Stadium  Fieldturf  1:00pm  Jacksonville Jaguars -2.5   \n",
+      "4           Gillette Stadium  Fieldturf  1:00pm  New England Patriots -6.0   \n",
+      "..                       ...        ...     ...                        ...   \n",
+      "262         Gillette Stadium  Fieldturf  1:05pm  New England Patriots -3.5   \n",
+      "263  Mercedes-Benz Superdome  Sportturf  4:40pm    New Orleans Saints -8.5   \n",
+      "264  Mercedes-Benz Superdome  Sportturf  3:05pm    New Orleans Saints -3.0   \n",
+      "265        Arrowhead Stadium      Grass  6:40pm    Kansas City Chiefs -3.0   \n",
+      "266    Mercedes-Benz Stadium  Fieldturf  6:30pm  New England Patriots -2.0   \n",
+      "\n",
+      "                     weather  winner  winning_abbr          winning_name  \\\n",
+      "0     81 degrees, wind 8 mph    Home           PHI   Philadelphia Eagles   \n",
+      "1    58 degrees, wind 11 mph    Away           PIT   Pittsburgh Steelers   \n",
+      "2    61 degrees, wind 12 mph    Home           RAV      Baltimore Ravens   \n",
+      "3     59 degrees, wind 7 mph    Away           JAX  Jacksonville Jaguars   \n",
+      "4    62 degrees, wind 10 mph    Home           NWE  New England Patriots   \n",
+      "..                       ...     ...           ...                   ...   \n",
+      "262   26 degrees, wind 3 mph    Home           NWE  New England Patriots   \n",
+      "263                      NaN    Home           NOR    New Orleans Saints   \n",
+      "264                      NaN    Away           RAM      Los Angeles Rams   \n",
+      "265  19 degrees, wind 14 mph    Away           NWE  New England Patriots   \n",
+      "266                      NaN    Home           NWE  New England Patriots   \n",
+      "\n",
+      "              won_toss  week  \n",
+      "0    Eagles (deferred)     1  \n",
+      "1    Browns (deferred)     1  \n",
+      "2     Bills (deferred)     1  \n",
+      "3    Giants (deferred)     1  \n",
+      "4    Texans (deferred)     1  \n",
+      "..                 ...   ...  \n",
+      "262           Patriots    19  \n",
+      "263  Eagles (deferred)    19  \n",
+      "264    Rams (deferred)    20  \n",
+      "265  Chiefs (deferred)    20  \n",
+      "266    Rams (deferred)    21  \n",
+      "\n",
+      "[267 rows x 67 columns],        Unnamed: 0  attendance  away_first_downs  away_fourth_down_attempts  \\\n",
+      "0    201909050chi       62435                13                          0   \n",
+      "1    201909080cle       67431                21                          0   \n",
+      "2    201909080car       72005                22                          0   \n",
+      "3    201909080phi       69696                15                          2   \n",
+      "4    201909080nyj       78523                23                          1   \n",
+      "..            ...         ...               ...                        ...   \n",
+      "262  202001120kan       73503                23                          5   \n",
+      "263  202001120gnb       78998                23                          1   \n",
+      "264  202001190kan       73656                20                          3   \n",
+      "265  202001190sfo       72211                21                          2   \n",
+      "266  202002020kan       62417                21                          1   \n",
+      "\n",
+      "     away_fourth_down_conversions  away_fumbles  away_fumbles_lost  \\\n",
+      "0                               0             1                  0   \n",
+      "1                               0             0                  0   \n",
+      "2                               0             1                  0   \n",
+      "3                               2             0                  0   \n",
+      "4                               0             2                  2   \n",
+      "..                            ...           ...                ...   \n",
+      "262                             1             2                  1   \n",
+      "263                             1             0                  0   \n",
+      "264                             2             0                  0   \n",
+      "265                             2             3                  1   \n",
+      "266                             0             1                  0   \n",
+      "\n",
+      "     away_interceptions  away_net_pass_yards  away_pass_attempts  ...  \\\n",
+      "0                     0                  166                  30  ...   \n",
+      "1                     0                  216                  24  ...   \n",
+      "2                     1                  183                  39  ...   \n",
+      "3                     0                  370                  44  ...   \n",
+      "4                     2                  242                  37  ...   \n",
+      "..                  ...                  ...                 ...  ...   \n",
+      "262                   0                  348                  52  ...   \n",
+      "263                   0                  265                  31  ...   \n",
+      "264                   0                  210                  32  ...   \n",
+      "265                   2                  296                  39  ...   \n",
+      "266                   2                  210                  31  ...   \n",
+      "\n",
+      "                     stadium    surface    time                 vegas_line  \\\n",
+      "0              Soldier Field      Grass  8:20pm         Chicago Bears -3.5   \n",
+      "1        FirstEnergy Stadium      Grass  1:00pm      Cleveland Browns -5.5   \n",
+      "2    Bank of America Stadium      Grass  1:00pm      Los Angeles Rams -1.5   \n",
+      "3    Lincoln Financial Field      Grass  1:00pm  Philadelphia Eagles -10.5   \n",
+      "4            MetLife Stadium  Fieldturf  1:00pm         New York Jets -2.5   \n",
+      "..                       ...        ...     ...                        ...   \n",
+      "262        Arrowhead Stadium  Astroturf  3:05pm   Kansas City Chiefs -10.0   \n",
+      "263            Lambeau Field      Grass  6:40pm     Green Bay Packers -4.5   \n",
+      "264        Arrowhead Stadium  Astroturf  3:05pm    Kansas City Chiefs -7.5   \n",
+      "265           Levi's Stadium      Grass  6:40pm   San Francisco 49ers -8.0   \n",
+      "266        Hard Rock Stadium      Grass  6:30pm    Kansas City Chiefs -1.5   \n",
+      "\n",
+      "                                            weather  winner  winning_abbr  \\\n",
+      "0    65 degrees, relative humidity 69%, wind 10 mph    Away           GNB   \n",
+      "1    71 degrees, relative humidity 55%, wind 10 mph    Away           OTI   \n",
+      "2     87 degrees, relative humidity 53%, wind 3 mph    Away           RAM   \n",
+      "3     79 degrees, relative humidity 49%, wind 4 mph    Home           PHI   \n",
+      "4     77 degrees, relative humidity 46%, wind 6 mph    Away           BUF   \n",
+      "..                                              ...     ...           ...   \n",
+      "262                                             NaN    Home           KAN   \n",
+      "263   23 degrees, relative humidity 74%, wind 8 mph    Home           GNB   \n",
+      "264                                             NaN    Home           KAN   \n",
+      "265   58 degrees, relative humidity 56%, wind 5 mph    Home           SFO   \n",
+      "266                                             NaN    Home           KAN   \n",
+      "\n",
+      "            winning_name             won_toss  week  \n",
+      "0      Green Bay Packers     Bears (deferred)     1  \n",
+      "1       Tennessee Titans    Titans (deferred)     1  \n",
+      "2       Los Angeles Rams      Rams (deferred)     1  \n",
+      "3    Philadelphia Eagles    Eagles (deferred)     1  \n",
+      "4          Buffalo Bills      Jets (deferred)     1  \n",
+      "..                   ...                  ...   ...  \n",
+      "262   Kansas City Chiefs               Texans    19  \n",
+      "263    Green Bay Packers  Seahawks (deferred)    19  \n",
+      "264   Kansas City Chiefs    Chiefs (deferred)    20  \n",
+      "265  San Francisco 49ers   Packers (deferred)    20  \n",
+      "266   Kansas City Chiefs     49ers (deferred)    21  \n",
+      "\n",
+      "[267 rows x 67 columns]]\n"
+     ]
     }
    ],
    "source": [
-    "# THIS IS HERE JUST AS AN EXAMPLE. YOU CAN REMOVE THIS WHEN YOU START \n",
-    "# WORKING ON IT\n",
-    "from FootballML.Classifiers.Individual.logistic_regression_classifier import test_data\n",
+    "from FootballML.Classifiers.Individual.logistic_regression_classifier import run_logistic_regression\n",
     "\n",
-    "# Display data\n",
-    "test = test_data()\n",
-    "test"
+    "run_logistic_regression()"
    ]
   }
  ],
@@ -166,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
