Added primitive confusion matrix to logistic regression

--- a/FootballML/Individual_Results/logistic_regression_results.ipynb
+++ b/FootballML/Individual_Results/logistic_regression_results.ipynb
@@ -41,7 +41,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.7\n"
+      "Score: 0.7\n",
+      "\n",
+      "Confusion matrix:\n",
+      "[[ 9  7]\n",
+      " [ 2 12]]\n"
      ]
     }
    ],
@@ -50,14 +54,6 @@
     "\n",
     "run_logistic_regression()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ab0238f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
