Refactored logistic regression classifier

--- a/FootballML/Individual_Results/logistic_regression_results.ipynb
+++ b/FootballML/Individual_Results/logistic_regression_results.ipynb
@@ -36,6 +36,17 @@
    "execution_count": 2,
    "id": "bdfe3921",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Football\n",
+    "from FootballML.Classifiers.Individual.logistic_regression_classifier import logistic_regression_classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d2e984d4",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -50,9 +61,8 @@
     }
    ],
    "source": [
-    "from FootballML.Classifiers.Individual.logistic_regression_classifier import run_logistic_regression\n",
-    "\n",
-    "run_logistic_regression()"
+    "# Run individual classifier\n",
+    "logistic_regression_classifier()"
    ]
   }
  ],
