worked on neural network

--- a/FootballML/Individual_Results/neural_network_results.ipynb
+++ b/FootballML/Individual_Results/neural_network_results.ipynb
@@ -363,7 +363,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nnc.run_neural_network(2019)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nnc.predict(xtest,ytest)"
+   ]
   }
  ],
  "metadata": {
