Refactored logistic regression classifier

--- a/FootballML/Individual_Results/logistic_regression_results.ipynb
+++ b/FootballML/Individual_Results/logistic_regression_results.ipynb
@@ -7,8 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the code for the classifier in this file and run everything here\n",
-    "# as a testing/results interface"
+    "# Testing/Results notebook for the Logistic Regression classifier"
    ]
   },
   {
@@ -38,14 +37,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Football\n",
+    "# Logistic Regression classifier imports\n",
     "from FootballML.Classifiers.Individual.logistic_regression_classifier import logistic_regression_classifier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d2e984d4",
+   "id": "8967205a",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +60,7 @@
     }
    ],
    "source": [
-    "# Run individual classifier\n",
+    "# Run classifier\n",
     "logistic_regression_classifier()"
    ]
   }
