Set up skeleton for ensemble classifier

--- a/FootballML/Individual_Results/logistic_regression_results.ipynb
+++ b/FootballML/Individual_Results/logistic_regression_results.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "otherwise-details",
+   "execution_count": null,
+   "id": "53c9690e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Testing/Results notebook for the Logistic Regression classifier"
+    "# Results for Logistic Regression Classifier"
    ]
   },
   {
@@ -38,13 +38,13 @@
    "outputs": [],
    "source": [
     "# Logistic Regression classifier imports\n",
-    "from FootballML.Classifiers.Individual.logistic_regression_classifier import logistic_regression_classifier"
+    "from FootballML.Classifiers.Individual.logistic_regression_classifier import run_logistic_regression"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "05703042",
+   "id": "8130377c",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
    ],
    "source": [
     "# Run classifier\n",
-    "logistic_regression_classifier()"
+    "run_logistic_regression()"
    ]
   }
  ],
