Added example for ensemble classifier

--- a/ensemble_results.ipynb
+++ b/ensemble_results.ipynb
@@ -15,7 +15,15 @@
    "execution_count": 1,
    "id": "d6c6b000",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test importing ensemble classifier stuff\n"
+     ]
+    }
+   ],
    "source": [
     "from FootballML.Classifiers.Ensemble.ensemble_classifier import test\n",
     "\n",
