Updated ensemble classifier and fixed thing in randome forest

--- a/ensemble_results.ipynb
+++ b/ensemble_results.ipynb
@@ -20,14 +20,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test importing ensemble classifier stuff\n"
+      "entered\n",
+      "Score: 0.6\n",
+      "ended\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "from FootballML.Classifiers.Ensemble.ensemble_classifier import test\n",
+    "from FootballML.Classifiers.Ensemble.ensemble_classifier import run_ensemble_classifier\n",
     "\n",
-    "test()"
+    "run_ensemble_classifier()"
    ]
   }
  ],
