Final ensemble model implemented. Only graphs and refactoring left to do

--- a/ensemble_results.ipynb
+++ b/ensemble_results.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b73c6d",
+   "id": "9a4d1599",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Results for Ensemble Classifier"
+    "# Results for the ensemble classifier"
    ]
   },
   {
@@ -16,15 +16,6 @@
    "id": "d6c6b000",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "entered\n",
-      "Score: 0.6\n",
-      "ended\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -36,8 +27,18 @@
     }
    ],
    "source": [
-    "from FootballML.Classifiers.Ensemble.ensemble_classifier import run_ensemble_classifier\n",
-    "\n",
+    "# Ensemble classifier imports\n",
+    "from FootballML.Classifiers.Ensemble.ensemble_classifier import run_ensemble_classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4325a4ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run classifier\n",
     "run_ensemble_classifier()"
    ]
   }
